* Added an immediate mode to CSplitter. There is now the choice of resizing
   the panes while the splitter bar is being dragged, or defer the resizing
   until the splitter bar drag is complete (as before).
   
The following changes have been made to the Win32++ code:
Added CDC class 
Added CSplitter::SetImmediate
Added CSplitter::SetVertical
Added CWnd::GetDlgItemText
Added CWnd::GetWindowText

Changed CSplitter::CSplitter 	now requires no arguements



Version 5.61
-----------
New Features
* Added support for Visual Studio 2008 and Visual Studio 2008 Express
* Better exception handling:
  - Any failure of 'new' now generates a bad_alloc exception
  - Exceptions are thrown when rebar messages such as RB_INSERTBAND fail.

Bug Fixes:
* The size of text in dropdown menus is calculated more accurately.

Version 5.6
-----------
Bug Fixes:
* MDI accelerators (like Ctrl+F6) now work
* Fixed notification reflection in CDialog
* Browser sample now compiles with VS 2005 Express

New Features:
* Added InitInstance to CWinApp. Code to create windows should now be
   placed in InitInstance instead of the constructor of the CWinApp
   derived class. Doing this allows the CWinApp derrived class to be
   fully constructed before attempting to create windows. WinMain 
   (or _tWinMain for Unicode apps) has also changed. A typical _tWinMain 
   now looks like this:
    INT WINAPI _tWinMain(HINSTANCE hInstance, HINSTANCE, LPTSTR, int)
    {
      // Start Win32++
      CFrameApp theApp(hInstance);
   
      // Run the application
      return theApp.Run();  // <- This has changed
    }
* Property Sheets are now supported. The files PropertySheet.cpp and 
   PropertySheet.h have been added to Win32++. These files define
   the CPropertySheet and CPropertyPage classes. The Property sheet generic 
   demonstrates the following:
  - Modal property sheets.
  - Modeless property sheets.
  - Wizards.
* The owner drawing of menus has been moved from CMenubar to CFrame. This